Mon Nov  9 16:37:52 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips.c (function_prologue): When TARGET_MIPS16, adjust the register
	offset in the .mask pseudo to compensate for frame pointer adjustments.
	(mips16_fp_args, build_mips16_call_stub): For little endian, do not
	word swap arguments moved to/from FP registers.
	* mips16.S (DFREVCMP): Reverse arguments to OPCODE.
	
Mon Nov 9 09:47:06 PST 1998 Jeff Law  (law@cygnus.com)

	* version.c: Bump for snapshot.

Mon Nov 9 02:14:14 PST 1998 Jeff Law  (law@cygnus.com)

	* version.c: Bump for snapshot.

Mon Nov  9 03:06:24 1998  Jeffrey A Law  (law@cygnus.com)

	* reload1.c (delete_output_reload_insn): If a pseudo is set multiple
	times, then it can not be completely replaced.

Mon Nov  9 00:39:02 1998  Richard Henderson  <rth@cygnus.com>

	* alpha.md (call, call_value) [OSF]: Correct alt 3 insn length.

Sun Nov  8 17:50:30 1998  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gansidecl.h: Prepend a "G" to the macro wrapping this file
	(to distinguish it from the macro wrapping ansidecl.h.)
	Include libiberty's ansidecl.h.  Remove all redundant definitions.
  	Define the PROTO() style macros in terms of the PARAMS() ones.

	
	* calls.c (emit_library_call): Switch on ANSI_PROTOTYPES, not
	__STDC__, when deciding whether to use ANSI variable args.
	(emit_library_call_value): Likewise.

	* cccp.c (error): Likewise.
	(warning): Likewise.
	(error_with_line): Likewise.
	(warning_with_line): Likewise.
	(pedwarn): Likewise.
	(pedwarn_with_line): Likewise.
	(pedwarn_with_file_and_line): Likewise.
	(fatal): Likewise.

	* cexp.y (error): Likewise.
	(pedwarn): Likewise.
	(warning): Likewise.

	* collect2.c (fatal_perror): Likewise.
	(fatal): Likewise.
	(error): Likewise.

	* combine.c (gen_rtx_combine): Likewise.

	* cpperror.c (cpp_message): Likewise.
	(cpp_fatal): Likewise.

	* cpplib.c (cpp_error): Likewise.
	(cpp_warning): Likewise.
	(cpp_pedwarn): Likewise.
	(cpp_error_with_line): Likewise.